<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    card_view:cardBackgroundColor="@android:color/black"
    card_view:cardElevation="20dp"
    card_view:contentPadding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@android:color/white"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="33dp"
            android:contentDescription="@string/namespace_events"
            android:padding="4dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/cluster_url"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/cluster_url"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/cluster_url"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="25dp"
                android:layout_margin="7dp"
                android:contentDescription="@string/default_context_description"
                android:src="@drawable/ic_drag" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>